--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
