--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
+    "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.5",
     "swiper": "^9.4.0"
