--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
+    "@headlessui/react": "^1.7.16",
     "@react-spring/web": "^9.7.2",
     "@smastrom/react-rating": "^1.3.1",
     "@stripe/react-stripe-js": "^2.1.0",
@@ -25,6 +26,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.3",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.9",
@@ -35,7 +37,7 @@
     "react-router-dom": "^6.11.2",
     "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.7.5",
+    "sweetalert2": "^11.7.20",
     "swiper": "^9.4.0"
   },
   "devDependencies": {
