--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
     "@headlessui/react": "^1.7.16",
     "@react-spring/web": "^9.7.2",
@@ -29,7 +30,7 @@
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
-    "react-hook-form": "^7.43.9",
+    "react-hook-form": "^7.45.2",
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
     "react-parallax": "^3.5.1",
