--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
     "react-spinners": "^0.13.8",
+    "recharts": "^2.7.2",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.20",
     "swiper": "^9.4.0"
